@@ -45,6 +45,9 @@ earlier releases.
   * [all]: Changelog downloading is restored
            (Closes: #669569, LP: #824708)
 
+  * [cmdline]: Exit with non-zero status when a package run is
+               aborted. (Closes: #293008)
+
 - Cosmetic and UI bugs:
 
   * [curses]: Adjust default widths of localized columns:
